# CoordTrafoUtil

./: .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE  README.md  README_8md.html  TransformationHelper_8h.html  TransformationHelper_8h__incl.map  TransformationHelper_8h__incl.md5  TransformationHelper_8h_source.html  annotated.html  base-transformation-config.cmake.in  changelog.md  classTransformation_1_1TransformationConverter-members.html  classTransformation_1_1TransformationConverter.html  classTransformation_1_1TransformationMeta-members.html  classTransformation_1_1TransformationMeta.html  classTransformation_1_1TransformationMetaBuilder-members.html  classTransformation_1_1TransformationMetaBuilder.html  classTransformation_1_1TransformationMeta__coll__graph.map  classTransformation_1_1TransformationMeta__coll__graph.md5  classes.html  conceptTransformation_1_1matrix__const__access.html  conceptTransformation_1_1matrix__full__access.html  conceptTransformation_1_1matrix__getter.html  conceptTransformation_1_1matrix__setter.html  conceptTransformation_1_1quaternion__const__access.html  conceptTransformation_1_1quaternion__full__access.html  conceptTransformation_1_1quaternion__getter.html  conceptTransformation_1_1quaternion__setter.html  conceptTransformation_1_1vector__const__access.html  conceptTransformation_1_1vector__full__access.html  conceptTransformation_1_1vector__getter.html  conceptTransformation_1_1vector__setter.html  concepts.html  concepts_8h.html  concepts_8h__dep__incl.map  concepts_8h__dep__incl.md5  concepts_8h__incl.map  (+99 more)
.github/workflows/: docs.yml
base-transformation/: CMakeLists.txt
base-transformation/Plugins/: CMakeLists.txt
base-transformation/Plugins/include/base-transformation/Plugins/: eigen.h  pcl.h  plugins.h  plugins.h.in
base-transformation/Plugins/include/transformationBase/Plugin/: pcl.h
base-transformation/Plugins/src/: eigen.cpp  pcl.cpp
base-transformation/include/base-transformation/: TransformationHelper.h  concepts.h  converter.h  meta.h  presets.h  ratio.h  traits.h  types.h
base-transformation/src/: TransformationHelper.cpp
changelog/: v0.1.0.md
examples/: CMakeLists.txt  custom_type_support.cpp  unity_to_unreal.cpp
scripts/: update_vcpkg_port.ps1  update_vcpkg_port.py
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  concepts_0.js  defines_0.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  files_0.js  files_1.js  (+23 more)
tests/: CMakeLists.txt  handedness_tests.cpp  transformation_tests.cpp
transformationBase/: CMakeLists.txt  TransformationHelper.cpp  TransformationHelper.h  source.cpp  transformationBase.vcxproj  transformationBase.vcxproj.filters
transformationBase/Plugins/: CMakeLists.txt  eigen.h
transformationBase/Plugins/include/transformationBase/Plugin/: plugins.h
transformationBase/src/: TransformationHelper.cpp
vcpkg-port/: portfile.cmake  usage  vcpkg.json
